rename toolcontrol to var controller
